--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 </div>
 
-                <a href="CV Umair.pdf" 
+                <a href="Mohammad Umair Resume.pdf" 
                   class="btn" download>Download CV</a>
             </div>          
             
@@ -79,7 +79,7 @@
                 <p>Hey there ,I'm Mohammad Umair 'Front-End Web Dev' and I have Completed my Bachelor's. Now I have Skilled HTML, CSS, JS, Reactjs for Web Development and also have Knowledge about SQL Server, MYSQL for Database Managment Development. have a nice day ! 
                 </p>
                 <a href="#" class="btn">Read More</a>
-            </div>
+            </div> 
         </section>
 
 
@@ -87,26 +87,26 @@
 
         <section class="services" id="services">
             <h2 class="heading">Our <span> Services</span></h2>
-            <div class="services-container">
+            <div class="services-container"> 
                 <div class="services-box">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Development</h3>
                     <p>I have Skilled of HTML ,CSS, Javascript, Reactjs, MVC, SQL Server, .net  </p>
-                    <a href="#" class="btn"> Read More</a>
+                    <a href="#" class="btn1"> Read More</a>
                 </div>
 
                 <div class="services-box">
                     <i class='bx bxs-paint' ></i>
                     <h3>Graphic Design</h3>
                     <p> A graphic designer creates visuals for all kinds of projects, from websites to print ads.</p>
-                    <a href="#" class="btn"> Read More</a>
+                    <a href="#" class="btn1"> Read More</a>
                 </div>
 
                 <div class="services-box">
                     <i class='bx bx-bar-chart-alt' ></i>
                     <h3>Digital marketing</h3>
                     <p> I have a Skilled of Search engine optimisation, Social media marketing.</p>
-                    <a href="#" class="btn"> Read More</a>
+                    <a href="#" class="btn1"> Read More</a>
                 </div>
             </div>
         </section>
