--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Personal Portfolio Website Design</title>
+    <title>Umair</title>
 
     <!---Box Icons--->
 
@@ -24,7 +24,7 @@
 
 
         <header class="header">
-            <a href="#" class="logo">Portfolio</a>
+            <a href="#" class="logo">Umair</a>
 
             <!-- <i class='bx bx-menu' id="menu-icon"></i> -->
             <i class='bx bx-menu'></i>
@@ -111,25 +111,25 @@
             </div>
         </section>
 
-        <!------------Portfolio Sections Design-------------->
+        <!------------Projects Sections Design-------------->
          <section class="services" id="portfolio" >
-            <h2 class="heading"><span> Project </span></h2>
+            <h2 class="heading"><span> Projects </span></h2>
             <div class="portfolio-container">
             <div class="portfolio-box">
-            <img src="portfolio1.jpg" alt=""  >
+            <img src="./Todo_image.png" alt=""  >
             <div class="portfolio-layer">
-            <h4>Weather </h4> 
+            <h4>Todo App </h4> 
             <p>This project will tell you the eather of any city.</p>
-            <a href="#"> <i class='bx bx-link-external'></i></a>
+            <a href="https://hereumair143.github.io/Todo-App/"> <i class='bx bx-link-external'></i></a>
         </div>
     </div>
 
     <div class="portfolio-box">
-        <img src="portfolio2.jpg" alt="">
+        <img src="./WeatherImage.png" alt="">
         <div class="portfolio-layer">
         <h4>Landing Page</h4>
         <p>A landing page is a standalone web page that potential customers can “land” on when they click through from an email, ad, or other digital location. </p>
-        <a href="#"> <i class='bx bx-link-external'></i></a>
+        <a href="https://hereumair143.github.io/Weather-App/"> <i class='bx bx-link-external'></i></a>
     </div>
 </div>
 
@@ -141,7 +141,7 @@
     <a href="#"> <i class='bx bx-link-external'></i></a>
 </div>
 </div>
-
+<!-- 
 <div class="portfolio-box">
     <img src="portfolio4.jpg" alt="">
     <div class="portfolio-layer">
@@ -167,7 +167,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ab.</p>
     <a href="#"> <i class='bx bx-link-external'></i></a>
 </div>
-</div>
+</div> -->
 </div>
   </section>
 
