In Project Options Changes

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 </div>
 
 <div class="portfolio-box">
-    <img src="portfolio3.jpg" alt="">
+    <img src="AmazonImage.png" alt="">
     <div class="portfolio-layer">
     <h4>Web Design</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ab.</p>
-    <a href="#"> <i class='bx bx-link-external'></i></a>
+    <a href="https://hereumair143.github.io/Amazon-Clone/"> <i class='bx bx-link-external'></i></a>
 </div>
 </div>
 <!-- 
